bloboats (1.0.1.dsfg-3) UNRELEASED; urgency=low

  * Add a watch file
  * Update upstream URLs

 -- Paul Wise <pabs@debian.org>  Sat, 31 Jan 2009 19:03:27 +0900

bloboats (1.0.1.dsfg-2) unstable; urgency=low

  [ William Lima ]
  * Add call to dh_desktop to debian/rules
  * Add .desktop file (Closes: #466287)

  [ Jon Dowland ]
  * add Homepage: control field to source stanza

  [ Barry deFreese ]
  * Update fix_makefile.patch to remove strip. (Closes: #436595).
  * Remove Homepage from package description.
  * Add VCS tags in control.
  * Bump Standards Version to 3.7.3. (No changes needed).
  * Add myself to uploaders.

  [ Ansgar Burchardt ]
  * Add Icon to .desktop file

  [ Gonéri Le Bouder ]
  * remove libsdl-mixer1.2-dev since it's not needed for the moment
  * do not link with sdl-mixer too (fix_makefile.patch updated)

 -- Gonéri Le Bouder <goneri@rulezlan.org>  Wed, 20 Feb 2008 16:38:06 +0000

bloboats (1.0.1.dsfg-1) unstable; urgency=low

  [ Gonéri Le Bouder ]
  * Initial release (Closes: #383945)
  * dfsg: sound files removed
   - README.Debian created to explain the issue.

  [ Jon Dowland ]
  * update menu section to "Games/Action" for menu transition
    (thanks Linas Žvirblis)

 -- Jon Dowland <jon@alcopop.org>  Thu, 12 Jul 2007 11:23:53 +0100
